# OpsAgent

./: .dockerignore  .gitignore  Containerfile  README.md  build-and-push.sh  config.yaml  config.yaml.example  deploy-to-openshift.sh  env.example  langgraph.json  pyproject.toml
.github/workflows/: build-and-publish-ghcr.yml
app/: graph.py
app/agents/: __init__.py  specialized_agent.py
app/agents/ops_agent/: __init__.py  agent.py
app/agents/ops_agent/tools/: __init__.py  ansible_tools.py  memory.py
app/agents/terraform_agent/: __init__.py  agent.py
app/mcp/: __init__.py  client.py
app/mcp/adapters/: __init__.py  aap_adapter.py
app/mcp_integration/: __init__.py  client.py
app/mcp_integration/adapters/: __init__.py
app/routing/: __init__.py  coordinator.py
app/shared/: __init__.py  config.py  state.py
deploy/: README.md  configmap.yaml  deployment.yaml  secrets.yaml.example
docs/: README.md  rhel-vm-terraform-diagram.md  vm-migration-mtv-diagram.md
examples/: mcp_integration.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_context.py
